--- a/styles/architect.css
+++ b/styles/architect.css
@@ -4,3 +4,95 @@
 body {
     font-family: 'Work Sans', sans-serif;
 }
+
+
+.btn-primary {
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    border-radius: 8px;
+    background: #FF900E;
+    border: none;
+    padding: 20px 25px;
+}
+
+/* navigation styles */
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+nav ul {
+    display: flex;
+    list-style: none;
+}
+
+
+nav li {
+    margin-right: 50px;
+}
+
+
+.section-title {
+    color: #131313;
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+
+nav li {
+    color:#424242;
+    text-align: center;
+    font-size: 1.2rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 26px; /* 144.444% */
+}
+
+
+/* header section styles  */
+header {
+    background: rgba(255, 144, 14, 0.10);
+
+}
+
+
+/* banner section styles */
+.banner {
+    text-align: center;
+    width: 50%;
+    margin: auto;
+    
+}
+
+
+.banner-title {
+    color:#131313;
+    text-align: center;
+    font-size: 4rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+
+.banner-description {
+    color:#727272;
+    text-align: center;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px; /* 162.5% */
+}
+
+.banner-img {
+    width: 80%;
+    margin: 50px auto;
+}
