--- a/styles/architect.css
+++ b/styles/architect.css
@@ -106,13 +106,18 @@ header {
 }
 
 
+/* main section styles  */
+main {
+    width: 90%;
+    margin: auto;
+}
+
 /* team section styles */
 .team-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 80%;
-    margin: auto;
+    
     gap: 50px;
     margin-top: 50px;
 }
@@ -149,6 +154,63 @@ header {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+}
+
+
+/* feature section styles */
+.feature {
+    margin-top: 50px;
+}
+
+.feature-title {
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+.feature-container {
+    display: flex;
+    gap: 30px;
+}
+
+
+.feature-img img {
+    margin-left: 5rem;
+}
+
+.card {
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+
+.ten-year {
+    border-radius: 8px;
+    background: #FF900E;
+    width: 18rem;
+    text-align: center;
+    padding: 2rem;
+    position: relative;
+    bottom: 6rem;
+}
+
+.ten-year-title {
+    color: #FFF;
+    font-size: 4rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 70px; /* 107.692% */
+    margin-bottom: -20px;
+}
+
+.ten-year-des {
+    color: #FFF;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 40px;
 }
 
 
