--- a/styles/architect.css
+++ b/styles/architect.css
@@ -217,14 +217,21 @@ main {
 /* small devices */
 @media screen and (max-width:576px) {
     nav,
-    .team-container {
+    .team-container,
+    .feature-container {
         flex-direction: column;
     }
 
     
-    .banner-img {
+    .banner-img,
+    .feature-img img {
         width: 100%;
     }
+
+    .feature-img img {
+        margin: 0;
+    }
+
 
     
     .banner {
